# yolo_trt_ros

./: README.md  package.xml
cv_camera_driver/launch/: cv_camera_driver.launch
include/yolo_trt_yolov5/: yolo_trt_yolov5.h
name/: voc.names
robot/: CMakeLists.txt  package.xml
robot/include/communication/: communication.h
robot/include/detection/: yolo_detection.h
robot/include/go_room/: go_room.h
robot/include/move/: navigation.h
robot/include/people_tracking/: people_tracking.h
robot/launch/: creat_pos.launch  run.launch  tracking.launch
robot/src/communication/: communication_core.cpp  communication_node.cpp
robot/src/detection/: yolo_detection_core.cpp  yolo_detection_node.cpp
robot/src/go_room/: go_room_core.cpp  go_room_node.cpp
robot/src/move/: navigation.cpp  navigation_node.cpp
robot/src/people_tracking/: people_tracking_core.cpp  people_tracking_node.cpp  tracking.cpp
src/: yolov5_trt_node.cpp
yolo_trt/: CMakeLists.txt  package.xml
yolo_trt/include/yolo_trt/: yolo_trt.h  yololayer.h
yolo_trt/name/: voc.names
yolo_trt/src/: yolo_trt_core.cpp  yolo_trt_node.cpp
yolo_trt_yolov5/: CMakeLists.txt
yolo_trt_yolov5/include/yolo_trt_yolov5/: yololayer.h
yolo_trt_yolov5/src/: yolov5_trt_core.cpp
